--- a/MockIDP/.settings/org.eclipse.jdt.core.prefs
+++ b/MockIDP/.settings/org.eclipse.jdt.core.prefs
@@ -1,12 +1,13 @@
-eclipse.preferences.version=1
-encoding/src/main/java=utf-8
-encoding/src/main/resources=utf-8
+#Tue Sep 03 16:56:56 CEST 2013
 encoding/src/test/java=utf-8
+org.eclipse.jdt.core.compiler.compliance=1.5
+encoding/src/main/resources=utf-8
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+encoding/src/main/java=utf-8
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+eclipse.preferences.version=1
 encoding/src/test/resources=utf-8
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.7
-org.eclipse.jdt.core.compiler.compliance=1.7
+org.eclipse.jdt.core.compiler.source=1.5
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
-org.eclipse.jdt.core.compiler.source=1.7
