--- a/MockIDP/MockIDP.properties
+++ b/MockIDP/MockIDP.properties
@@ -1,3 +1,3 @@
 #Should be places in the folder where MockIDP is run
-spConsumerUrl=https://admin-dev:2081/saml/consumer
-audienceUri=dev1
+spEntityId=dev1
+spMetadataLocation=sp-metadata.xml
