Changed final name to MockIDP

--- a/MockIDP/pom.xml
+++ b/MockIDP/pom.xml
@@ -52,7 +52,7 @@
             
 	</dependencies>
 	<build>
-		<finalName>idportenMock</finalName>
+		<finalName>MockIDP</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
