--- a/MockIDP/MockIDP.properties
+++ b/MockIDP/MockIDP.properties
@@ -1,3 +1,3 @@
 #Should be places in the folder where MockIDP is run
-spEntityId=dev1
+spEntityId=openam.stavanger.kommune.no
 spMetadataLocation=sp-metadata.xml
